--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,7 @@
+
+<!DOCTYPE html>
+<html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
