--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
-  <script src="./js/menu.js"></script>
+  <script src="./js/modal-menu.js"></script>
 </body>
 
 </html>
