--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
+     <include src="./partials/page-hero.html"></include>
     <include src="./partials/how-its-made.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
