--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </main>
   <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./js/menu-btn.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
