переименованы классы для li

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       </a>
     </li>
   
-    <li class="product-item beige-item">
+    <li class="product-item beige-bg">
       <picture>
         <source srcset= "./images/bitmap/product/ice-coffee/desk@1x.png 1x, ./images/bitmap/product/ice-coffee/desk@2x.png 2x" media="(min-width:1280px)">
           <source srcset="./images/bitmap/product/ice-coffee/tab@1x.png 1x, ./images/bitmap/product/ice-coffee/tab@2x.png 2x" media="(min-width:740px)">
@@ -71,7 +71,7 @@
         </a>
     </li>
   
-    <li class="product-item green-item">
+    <li class="product-item green-bg">
       <picture>
         <source srcset="./images/bitmap/product/milkshake/desk@1x.png 1x, ./images/bitmap/product/milkshake/desk@2x.png 2x"
           media="(min-width:1280px)">
