--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <include src="./partials/page-hero.html"></include>
     <include src="./partials/swiper.html"></include>
-    <include src="./partials/products"></include>
+    <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
