добавил модальное окно

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,10 @@
       <include src="./partials/shops.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/backdrop.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/backdrop.js"></script>
   </body>
 </html>
