--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,17 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <title>Command sweet farm ;)</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Sweet farm ;)</title>
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-    <header class="page-header">
       <include src="./partials/site-nav.html"></include>
       <include src="./partials/hero.html"></include>
-    </header>
     <main>
       <include src="./partials/products.html"></include>
       <include src="./partials/manufacture.html"></include>
