прикручує js і додає слайдери

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="../slick/slick.css">
+    <link rel="stylesheet" href="../slick/slick-theme.css">
     <link rel="stylesheet" href="./sass/main.css">
 </head>
 <body>
@@ -23,6 +24,8 @@
     <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>    
+    <script src="../slick/slick.min.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 </html>
