Добавляет скрипт анимации при скроле + добавляет анимацию секции Products

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -30,5 +31,7 @@
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
     <script src="../src/js/header.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../src/js/aos.js"></script>
   </body>
 </html>
