--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
     /> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -36,15 +39,16 @@
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/section-products.html"></include>
+    <!-- <include src="./partials/section-products.html"></include>
     <include src="./partials/section-made.html"></include>
     <include src="./partials/section-features.html"></include>
     <include src="./partials/section-pictures.html"></include>
     <include src="./partials/section-slider.html"></include>
     <include src="./partials/section-locations.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/footer.html"></include> -->
 
     <!-- Скрипты модалки и меню -->
+
     <script src="./js/menu.js"></script>
     <!-- <script src="./js/modal-open-close.js"></script> -->
     <!-- Скрипты слайдера -->
