--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,15 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-    <!-- <include src="./partials/header.html"></include> -->
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <!-- <include src="./partials/section-products.html"></include>
+    <include src="./partials/section-products.html"></include>
     <include src="./partials/section-made.html"></include>
     <include src="./partials/section-features.html"></include>
     <include src="./partials/section-pictures.html"></include>
     <include src="./partials/section-slider.html"></include>
     <include src="./partials/section-locations.html"></include>
-    <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипты модалки и меню -->
 
