--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     />
   </head>
   <body>
+    <include src="./partials/header.html"></include>
+
     <include src="./partials/locations.html"></include>
 
     <include src="./partials/page-hero.html"></include>
