--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
   <include src="./partials/header.html"></include>
   <include src="./partials/hero.html"></include>
+  <include src="./partials/products.html"></include>
   <include src="./partials/recipe.html"></include>
   <include src="./partials/components.html"></include>
   <include src="./partials/locations.html"></include>
