--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,10 @@
   <include src="./partials/footer.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./script.js"></script>
   <script src="./js/menu.js"></script>
   <script src="./js/modal.js"></script>
+
 </body>
 
 </html>
