--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
 
   <body>
@@ -33,6 +34,7 @@
       <include src="./partials/shops.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/backdrop.html"></include>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
