подправила бургер для таблетки

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
   </footer>
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
+  <script src="./modal.js"></script>
   <script src="./menu.js"></script>
 </body>
 
