--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
 
 <body>
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-<!--   <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include> -->
+  <include src="./partials/header.html"></include>
+  <include src="./partials/hero.html"></include>
   <include src="./partials/products.html"></include>
-<!--   <include src="./partials/how-its-made.html"></include>
+  <include src="./partials/how-its-made.html"></include>
   <include src="./partials/slider.html"></include>
   <include src="./partials/shops.html"></include>
-  <include src="./partials/footer.html"></include> -->
+  <include src="./partials/footer.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   
