--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
   <body>
     <include src="./partials/header.html"></include>
 
-    <!-- <include src="./partials/locations.html"></include>
+    <include src="./partials/locations.html"></include>
 
     <include src="./partials/page-hero.html"></include>
     <include src="./partials/swiper.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
-    <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
