Отключает анимацию при скролле на мобильном

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,15 @@
     <script src="./js/modal.js"></script>
     <script src="../src/js/header.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../src/js/aos.js"></script>
+    <!-- <script src="../src/js/aos.js"></script> -->
+    <script>
+      AOS.init({
+        // AOS would work only for windows bigger than or equal to 768px
+        disable: function () {
+          var maxWidth = 768;
+          return window.innerWidth < maxWidth;
+        },
+      });
+    </script>
   </body>
 </html>
