--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
       <include src="./partials/how-its-made.html"></include>
+      <include src="./partials/galery.html"></include>
       <include src="./partials/slider.html"></include>
       <include src="./partials/shops.html"></include>
     </main>
