--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="../src/js/go_top.js"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
