--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./index.js"></script>
+    <script src="./js/header-modal.js"></script>
     <script src="./js/modal.js"></script>
+
     <script src="../src/js/header.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../src/js/aos.js"></script>
