--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <!-- Скрипты модалки и меню -->
 
     <script src="./js/menu.js"></script>
-    <!-- <script src="./js/modal-open-close.js"></script> -->
+    <script src="./js/modal-open-close.js"></script>
     <!-- Скрипты слайдера -->
     <script
       type="text/javascript"
