--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     
 
-    <include src="./partials/neader-hero.html"></include>
+    <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/how-it’s-made.html"></include>
     <include src="./partials/team.html"></include>
