--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-  <include src="./partials/header.html"></include>
+  <!-- <include src="./partials/header.html"></include> -->
   <include src="./partials/hero.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/how-its-made.html"></include>
