--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <include src="./partials/location.html"></include>
     </main>
 
-    <footer>
+    <footer class="footer">
       <include src="./partials/footer.html"></include>
     </footer>
 
