--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+  <include src="./partials/header.html"></include>
   <include src="./partials/hero.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/how-its-made.html"></include>
