--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,17 @@
 </head>
 
 <body>
-  <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include>
-  <include src="./partials/products.html"></include>
-  <include src="./partials/how-its-made.html"></include>
-  <include src="./partials/slider.html"></include>
-  <include src="./partials/shops.html"></include>
-  <include src="./partials/footer.html"></include>
+  
+    <include src="./partials/header.html"></include>
+  </main>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/how-its-made.html"></include>
+    <include src="./partials/galery.html"></include>
+    <include src="./partials/slider.html"></include>
+    <include src="./partials/shops.html"></include>
+    <include src="./partials/footer.html"></include>
+  </main>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   
