--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <include src="./partials/section-slider.html"></include>
     <include src="./partials/section-locations.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/mob-menu.html"></include>
     <!-- <include src="./partials/modal-window.html"></include>
     <include src="./partials/order-form.html"></include> -->
 
