--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
     <include src="./partials/section-locations.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/mob-menu.html"></include>
-    <!-- <include src="./partials/modal-window.html"></include>
-    <include src="./partials/order-form.html"></include> -->
+    <include src="./partials/modal-window.html"></include>
+    <!-- <include src="./partials/order-form.html"></include>  -->
 
     <!-- Скрипты модалки и меню -->
 
