--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
       rel="stylesheet"
