--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 
     <script src="../src/js/header.js"></script>
     <script src="../src/js/modal-maps.js"></script>
+    <script src="../src/js/modal-franchise.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script src="../src/js/aos.js"></script> -->
     <script>
