--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/mob-menu.html"></include>
     <include src="./partials/modal-window.html"></include>
-    <!-- <include src="./partials/order-form.html"></include>  -->
+    <include src="./partials/order-form.html"></include> 
 
     <!-- Скрипты модалки и меню -->
 
