одна из попыток поставить слайдер

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/recipe.html"></include>
     <include src="./partials/components.html"></include>
+    <include src="./partials/slider.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/modal-menu.html"></include>
     <include src="./partials/footer.html"></include>
