--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main>
+    <main class="main">
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
       <include src="./partials/how-made.html"></include>
@@ -36,8 +36,8 @@
 
     <script src="../src/js/header.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script src="../src/js/aos.js"></script> -->
-    <script>
+    <script src="../src/js/aos.js"></script>
+    <!-- <script>
       AOS.init({
         // AOS would work only for windows bigger than or equal to 768px
         disable: function () {
@@ -45,6 +45,6 @@
           return window.innerWidth < maxWidth;
         },
       });
-    </script>
+    </script> -->
   </body>
 </html>
