--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
 
     <script src="../src/js/header.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script src="../src/js/aos.js"></script> -->
-    <script>
+    <script src="../src/js/aos.js"></script>
+    <!-- <script>
       AOS.init({
         // AOS would work only for windows bigger than or equal to 768px
         disable: function () {
@@ -45,6 +45,6 @@
           return window.innerWidth < maxWidth;
         },
       });
-    </script>
+    </script> -->
   </body>
 </html>
