fix cow and shake:hover

--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,16 @@
         },
       });
     </script>
+    <div id="mydiv"></div>
+    <button onmouseenter="start()" onmouseout="stop()"> наводим курсор на меня </button>
+
+<script>
+  function start() {
+    mydiv.innerHTML = "<iframe src='/cow.mp3' allow='autoplay' style='display: none'></iframe>";
+  }
+  function stop() {
+    mydiv.innerHTML = "";
+  }
+</script>
   </body>
 </html>
