--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
 
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+
+    
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
@@ -36,7 +38,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/backdrop.html"></include>
-
+<a href="#" class="scrollup"></a>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
@@ -55,6 +57,7 @@
     <script src="./script.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/backdrop.js"></script>
+    <script src="./js/anchor.js"></script>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
