--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/backdrop.html"></include>
-<a href="#" class="scrollup"></a>
+<a href="#" class="scrollup" aria-label="scrollup"></a>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
