--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Cream</title>
+    <link rel="shortcut icon" type="image/jpg" href="./images/ice-cream.png" />
     <link
       rel="stylesheet"
       type="text/css"
