--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ice-cream</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
-  </head>
 
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/recipe.html"></include>
-    <include src="./partials/components.html"></include>
-    <include src="./partials/locations.html"></include>
-    <include src="./partials/modal-menu.html"></include>
-    <include src="./partials/footer.html"></include>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ice-cream</title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+</head>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <script src="./js/modal-menu.js"></script>
-  </body>
+<body>
+  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <include src="./partials/header.html"></include>
+  <include src="./partials/hero.html"></include>
+  <include src="./partials/recipe.html"></include>
+  <include src="./partials/components.html"></include>
+  <include src="./partials/slider.html"></include>
+  <include src="./partials/locations.html"></include>
+  <include src="./partials/modal-menu.html"></include>
+  <include src="./partials/footer.html"></include>
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+  <script src="./js/modal-menu.js"></script>
+</body>
+
 </html>
-
