--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
     <script src="../src/js/modal-maps.js"></script>
     <script src="../src/js/modal-franchise.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../src/js/aos.js"></script>
-    <!-- <script>
+    <!-- <script src="../src/js/aos.js"></script> -->
+    <script>
       AOS.init({
         // AOS would work only for windows bigger than or equal to 768px
         disable: function () {
@@ -47,6 +47,6 @@
           return window.innerWidth < maxWidth;
         },
       });
-    </script> -->
+    </script>
   </body>
 </html>
