добавил клик в модалку

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,15 @@
       integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
-    
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
@@ -38,7 +40,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/backdrop.html"></include>
-<a href="#" class="scrollup" aria-label="scrollup"></a>
+    <a href="#" class="scrollup" aria-label="scrollup"></a>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
