--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <include src="./partials/products.html"></include>
     <include src="./partials/made.html"></include>
     <include src="./partials/mass.html"></include>
+    <include src="./partials/collage.html"></include>
     <include src="./partials/swiper.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
