Убрала скролл боди при открытых модалках

--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,9 @@
     <script src="./index.js"></script>
     <script src="./js/header-modal.js"></script>
     <script src="./js/modal.js"></script>
-
-    <script src="../src/js/header.js"></script>
-    <script src="../src/js/modal-maps.js"></script>
-    <script src="../src/js/modal-franchise.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/modal-maps.js"></script>
+    <script src="./js/modal-franchise.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script src="../src/js/aos.js"></script> -->
     <script>
