Вносит измеения по дизайну

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 
 <body>
 
-
-  <include src="./partials/header.html"></include>
-  <include src="./partials/burger.html"></include>
-
-
+  <div class="body-cover">
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+  </div>
   <main>
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
+
+
     <include src="./partials/cow.html"></include>
     <include src="./partials/slider.html"></include>
     <include src="./partials/cards.html"></include>
