--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 
 <body>
 
-  <div class="body-cover">
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
-  </div>
+
+  <include src="./partials/header.html"></include>
+  <include src="./partials/burger.html"></include>
+
+
   <main>
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-
-
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
     <include src="./partials/cow.html"></include>
     <include src="./partials/slider.html"></include>
     <include src="./partials/cards.html"></include>
