Добавляет божественное оформление нашего божественного тимлида)

--- a/src/index.html
+++ b/src/index.html
@@ -12,27 +12,18 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
 </head>
 
-
 <body>
 
-
-
-    <!-- Так добавляются фрагменты   в главные HTML-файлы страниц. -->
-
-
-   
-
-  <include src="./partials/header.html"></include>
-  <include src="./partials/burger.html"></include>
-
-
-
-
-  <main>
-
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <div class="body-cover">
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
+  </div>
+  <main>
+
+    <!-- Так добавляются фрагменты  в главные HTML-файлы страниц. -->
+
+
     <include src="./partials/cow.html"></include>
     <include src="./partials/slider.html"></include>
     <include src="./partials/cards.html"></include>
@@ -40,7 +31,7 @@
   <footer>
     <include src="./partials/footer.html"></include>
   </footer>
-  <!-- Скрипт идёт послед ним в разметке. В нём уже подключен главный SASS-файл. -->
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
   <script src="./modal.js"></script>
   <script src="./menu.js"></script>
