--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <title>Заголовок страницы</title>
+    <title>ВНО</title>
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    
+    <include src="./partials/page-header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/feautures.html"></include>
+    <include src="./partials/genral-problem.html"></include>
+    <include src="./partials/advantage.html"></include>
+    <include src="./partials/our-programm.html"></include>
+    <include src="./partials/our_guarantees.html"></include>
+    <include src="./partials/registration-form.htm"></include>
+    <include src="./partials/page-footer.html"></include>
+    
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
