--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
   </head>
+  
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/problems.html"></include>
+    <include src="./partials/doings.html"></include>
+    <include src="./partials/programm.html"></include>
+    <include src="./partials/teacher.html"></include>
+    <include src="./partials/guarenty.html"></include>
+    <include src="./partials/reviews.html"></include>
+
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
