Добавила основные паршалы

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
   </head>
   <body class="body">
+
+    <header>
+    </header>
+
+    <main>
+    </main>
+
+    <footer>
+    </footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
