--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
+
+    <section class="how_we_do_it">
+
+      <ul>
+        <li>
+          пункт 1
+        </li>
+      </ul>
+
+    </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
