--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
-    <include src="./partials/method.html"></include>
     <include src="./partials/problems.html"></include>
+    <include src="./partials/method.html"></include>
     <include src="./partials/program.html"></include>
-    <include src="./partials/registration-form.html"></include>
-    <include src="./partials/reviews.html"></include>
     <include src="./partials/teacher.html"></include>
+    <include src="./partials/warranty.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/registration-form.html"></include>
     <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/menu.js"></script>
