Добавляет структуру файлов секции Hero

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
+    <include src='./partials/hero.html'></include>
     
     <script src="./index.js"></script>
   </body>
