Добавляет файл JS

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <include src="./partials/footer.html"></include>
 
   <script src="./index.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
