--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,14 @@
   <body class="body">
     <header></header>
 
-    <main></main>
+    <main>
+      <include src="./partials/section-teacher.html"></include>
+    </main>
 
     <footer></footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-    <include src="./partials/section-teacher.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
