Добавила разметку Section1

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-  </head>
-  <body>
-    <h1 class="kigo"> My supa dupa project</h1>
-    <img src="./images/demo.jpg" alt="">
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-      
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<!-- Section1 -->
+<section class="">
+  <div class="container">
+    <!-- <h2>Особенности</h2> -->
+    <ul class="">
+      <li class=>
+        <svg class="" width="60" height="60">
+          <use href="./img/sprite.svg#"></use>
+        </svg>
+        <h3 class="">Адаптированная авторская
+          программа ВНО</h3>
+      </li>
+      <li class=>
+        <svg class="" width="60" height="60">
+          <use href="./img/sprite.svg#"></use>
+        </svg>
+        <h3 class="">Современные
+          методики обучения</h3>
+      </li>
+      <li class=>
+        <svg class="" width="60" height="60">
+          <use href="./img/sprite.svg#"></use>
+        </svg>
+        <h3 class="">Финансовая гарантия
+          результата</h3>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<body>
+
+</body>
+
 </html>
