--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,37 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!-- ===============HEADER=============== -->
+    <include src="./partials/header.html"></include>
 
+    <main>
+      <!-- ===============HERO=============== -->
+      <include src="./partials/hero.html"></include>
+
+      <!-- ===============DESCRIPTION=============== -->
+      <include src="./partials/description.html"></include>
+
+      <!-- ===============PROBLEMS=============== -->
+      <include src="./partials/problems.html"></include>
+
+      <!-- ===============METHODS=============== -->
+      <include src="./partials/methods.html"></include>
+
+      <!-- ===============PROGRAMS=============== -->
+      <include src="./partials/programs.html"></include>
+
+      <!-- ===============TEACHER=============== -->
+      <include src="./partials/teacher.html"></include>
+
+      <!-- ===============GUARANTEE=============== -->
+      <include src="./partials/guarantee.html"></include>
+
+      <!-- ===============FEEDBACK=============== -->
+      <include src="./partials/feedback.html"></include>
+
+      <!-- ===============FOOTER=============== -->
+      <include src="./partials/footer.html"></include>
+    </main>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
