aded html for program and advantages

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Заголовок страницы</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./src/sass/main.scss">
+    <!-- <link rel="stylesheet" href="./src/sass/main.scss"> -->
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -14,7 +14,8 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/problems.html"></include>
     <include src="./partials/we_do_it.html"></include>
-    <include src="./partials/programm.html"></include>
+    <include src="./partials/program.html"></include>
+    <include src="./partials/advantages.html"></include>
     <include src="./partials/teacher.html"></include>
     <include src="./partials/waranty.html"></include>
     <include src="./partials/comment.html"></include>
