--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,13 @@
     <include src="./partials/page-header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/feautures.html"></include>
-    <include src="./partials/genral-problem.html"></include>
+    <include src="./partials/general-problem.html"></include>
     <include src="./partials/advantage.html"></include>
     <include src="./partials/our-programm.html"></include>
+    <include src="./partials/teacher.html"></include>
     <include src="./partials/our_guarantees.html"></include>
     <include src="./partials/registration-form.htm"></include>
+    <include src="./partials/clients.html"></include>
     <include src="./partials/page-footer.html"></include>
     
 
@@ -24,3 +26,4 @@
     <script src="./index.js"></script>
   </body>
 </html>
+s
