--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
+    <section class="hero">
+      <h1>hello world</h1>
+    </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
