Добавляет общие компоненты

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel=“preconnect” href=“https://fonts.gstatic.com”>
-    <link href=“https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap” rel=“stylesheet”>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
     <title>Hell EN</title>
   </head>
   <body>
+    <include src='./partials/hero.html'></include>
     
     <script src="./index.js"></script>
   </body>
