--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,17 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-
+<section class="about">
+  <h2>О нас</h2>
+  <div class="about-container">
+    <ul class="list-about">
+      <li class="item-about">Вася</li>
+      <li class="item-about">Петя</li>
+      <li class="item-about">Коля</li>
+      <li class="item-about">Люся</li>
+    </ul>
+  </div>
+</section>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
