--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/footer.html"></include>
     <footer>
       <h1>Привет</h1>
       <p>как дела ?</p>
