--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <title>Заголовок страницы</title>
+    <title>HelloEN</title>
   </head>
   <body>
     <!-- ===============HEADER=============== -->
