--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
       <li class="item-about">Люся</li>
     </ul>
   </div>
+  <div>
+    <h3>Проверка</h3>
+  </div>
 </section>
     <include src="./partials/footer.html"></include>
     <footer>
