--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-
+    <div>
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
