Добавлено разметку html

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     </header>
 
     <main>
+      <include src="./partials/page-problems.html"></include>
     </main>
-
     <footer>
     </footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
