--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <include src="./partials/example.html"></include>
     <div>
       <ul>
-        <li></li>
-        <li></li>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
       </ul>
     </div>
 <h1>HELLO</h1>
