--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 <h1>HELLO</h1>
+<include src="./partials/team.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
