--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-    <<<<<<< gallery
+    
 <section class="gallery">
   <img src="./images/demo.jpg" alt="demo">
 </section>
 
     <div>
       <ul>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
         <li><img src="" alt=""></li>
         <li><img src="" alt=""></li>
       </ul>
