--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
     <include src="./partials/team.html"></include>
     <footer>
       <li>hello</li>
+      <ul>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Instagram</a></li>
+      </ul>
     </footer>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
