добавил html паршаллы

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,18 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/main-issues.html"></include>
+    <include src="./partials/methods.html"></include>
+    <include src="./partials/program.html"></include>
+    <include src="./partials/features.html"></include>
+    <include src="./partials/teacher.html"></include>
+    <include src="./partials/warranty.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/form.html"></include>
+    <include src="./partials/footer.html"></include>
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
