--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -29,7 +32,7 @@
       <include src="./partials/methods.html"></include>
 
       <!-- ===============PROGRAMS=============== -->
-      <include src="./partials/program.html"></include>
+      <include src="./partials/programs.html"></include>
 
       <!-- ===============TEACHER=============== -->
       <include src="./partials/teacher.html"></include>
