--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <body class="body">
 
     <header>
+      <include src="./partials/page-header.html"></include>
     </header>
 
     <main>
@@ -21,9 +22,10 @@
     </footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/page-header.html"></include>
+
     
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./menu.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
