--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- ===============HEADER=============== -->
-      <include src="./partials/header.html"></include>
+    <include src="./partials/header.html"></include>
 
     <main>
       <!-- ===============HERO=============== -->
@@ -48,5 +48,6 @@
     </main>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
