Добавляет финальную разметку секций Hero и Advantages

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <include src='./partials/hero.html'></include>
-    <!-- <include src='./partials/advantages.html'></include> -->
+    <include src='./partials/advantages.html'></include>
     
     <script src="./index.js"></script>
   </body>
