--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/benefits.html"></include>
-
+    <include src="./partials/description.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
