--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <title>Заголовок страницы</title>
   </head>
   <body>
+    <header>
+      <h1>sdflsf</h1>
+    </header>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-    <header>
-      
-    </header>
+    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
