--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <include src="./partials/header.html"></include>
   <include src="./partials/hero.html"></include>
   <include src="./partials/problems.html"></include>
-  <!-- <include src="./partials/how.html"></include> -->
+  <include src="./partials/how.html"></include>
   <include src="./partials/program.html"></include>
   <include src="./partials/teacher.html"></include>
   <include src="./partials/guarantee.html"></include>
