поправляет некотыре изменения после пул реквеста

--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.0.0/modern-normalize.css" />
     <title>HellEN</title>
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- <include src="./partials/header.html"></include>
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/problems.html"></include>
-    <include src="./partials/method.html"></include> -->
+    <include src="./partials/method.html"></include>
     <include src="./partials/program.html"></include>
-    <!-- <include src="./partials/teacher.html"></include>
+    <include src="./partials/teacher.html"></include>
     <include src="./partials/warranty.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src="./partials/registration-form.html"></include>
-    <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/menu.js"></script>
     <script src="./index.js"></script>
