Создал структуру проекта

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>~Hell-EN~</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!-- Паршалы -->
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/advanteges.html"></include>
+    <include src="./partials/problems.html"></include>
+    <include src="./partials/approach.html"></include>
+    <include src="./partials/porgram.html"></include>
+    <include src="./partials/teacher.html"></include>
+    <include src="./partials/garantee.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/reg-form.html"></include>
+    <include src="./partials/footer.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <!-- Скрипты -->
     <script src="./index.js"></script>
   </body>
 </html>
