--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- ===============HEADER=============== -->
-    <!-- <include src="./partials/header.html"></include> -->
+    <include src="./partials/header.html"></include>
 
     <main>
       <!-- ===============HERO=============== -->
