добавленны базовые теги в индекс

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-  </head>
-  <body>
-      <main>
-          <include src="./partials/example.html"></include>
-      </main>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    
-    
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title lang="en">Helen</title>
+  <link rel="stylesheet" href="#">
+
+</head>
+
+<body>
+
+  <header>
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+
+
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
