Добавлен шрифт и цвета

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title lang="en">Helen</title>
-  <link rel="stylesheet" href="#">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -15,6 +16,7 @@
   </header>
 
   <main>
+    <include src="./partials/we_garants_comments.html"></include>
   </main>
 
   <footer>
