Вносит правки в названия паршалов

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
     <!-- Паршалы -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/advanteges.html"></include>
+    <include src="./partials/advantages.html"></include>
     <include src="./partials/problems.html"></include>
     <include src="./partials/approach.html"></include>
-    <include src="./partials/porgram.html"></include>
+    <include src="./partials/program.html"></include>
     <include src="./partials/teacher.html"></include>
-    <include src="./partials/garantee.html"></include>
+    <include src="./partials/guarantee.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src="./partials/reg-form.html"></include>
     <include src="./partials/footer.html"></include>
